# BookShelfProject

./: .gitignore  CMakeLists.txt  README.md
include/: common.hpp  file_reader.hpp  hello.h  myplace.hpp  objects.hpp  placedata.hpp
src/: file_reader.cpp  main.cpp
